@startuml
!theme plain
left to right direction
skinparam linetype ortho

' Klassen
class addressController
class addressServiceImpl
class addressRepo



interface AddressService
interface AddressRepo

addressController -() AddressService : "depends on"
addressServiceImpl -() AddressRepo : "@Autowired"

addressServiceImpl ..|> IAddressService
addressRepo ..|> IAddressRepo
@enduml



